--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -394,5 +394,17 @@ input:focus {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0 60px 0 60px;
+  padding: 100px 60px 0 60px;
+}
+
+
+
+.pack {
+  border-width: 0;
+  padding: 5px;
+}
+
+.cardPacks {
+  display: flex;
+  padding-top: 100px;
 }
