--- a/views/marketplace/select-offer.ejs
+++ b/views/marketplace/select-offer.ejs
@@ -7,7 +7,7 @@
     <button class="buttonItem btnWider" type="submit">Back</button>
 </form>
 <div id="marketAlign">
-    <div id="marketplaceItems">
+    <div class="selectOffer">
 <%- include("../../partials/inventory-display.ejs") %>
     </div>
 </div>
