--- a/views/marketplace/browse-offers.ejs
+++ b/views/marketplace/browse-offers.ejs
@@ -55,60 +55,62 @@
 <div id="marketAlign">
     <div id="marketplaceItems">
     <% item.forEach(item => { %>
-        <% if (Object.keys(filter).includes("SortPriceIncreasing") || Object.keys(filter).includes("SortPriceDecreasing")) { %>
-            <div class="itemTable">       
-                <ul class="removeListStyle">
-                    <!-- <li id="equipment">Equipment</li> -->
-                    <ul class="removeListStyle allignList">
-                        <div class="weaponStats">           
-                        <li><%=item.item.name%></li>                         
-                            <div class="inlineStats">   
-                                <li>⚔️ <%=item.item.modifier%></li>
-                                <li>👻 <%=item.price%></li>
-                            </div>
-                        </div> 
-                        <li><img class="itemImage" src="../../<%=item.item.image%>" width="130px"></li>
+        <% if (!item.sold) { %>
+            <% if (Object.keys(filter).includes("SortPriceIncreasing") || Object.keys(filter).includes("SortPriceDecreasing")) { %>
+                <div class="itemTable">       
+                    <ul class="removeListStyle">
+                        <!-- <li id="equipment">Equipment</li> -->
+                        <ul class="removeListStyle allignList">
+                            <div class="weaponStats">           
+                            <li><%=item.item.name%></li>                         
+                                <div class="inlineStats">   
+                                    <li>⚔️ <%=item.item.modifier%></li>
+                                    <li>👻 <%=item.price%></li>
+                                </div>
+                            </div> 
+                            <li><img class="itemImage" src="../../<%=item.item.image%>" width="130px"></li>
+                        </ul>
+                        <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) { %>
+                            <form action="/marketplace/remove-offer/<%=item._id%>/<%=item.item._id%>" method="POST">
+                                <button class="buttonItem btnWider" type="submit">Withdraw offer</button>
+                            </form>
+                            <div style="color: green;">Your Offer</div>
+                        <% } else { %>
+                            <form action="/marketplace/buy-item/<%=item._id%>/<%=item.item._id%>/<%=item.owner._id%>" method="POST">
+                                <button class="buttonItem btnWider" type="submit">Buy item</button>
+                            </form>
+                        <% }  %>
                     </ul>
-                    <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) { %>
-                        <form action="/marketplace/remove-offer/<%=item._id%>/<%=item.item._id%>" method="POST">
-                            <button class="buttonItem btnWider" type="submit">Withdraw offer</button>
-                        </form>
-                        <div style="color: green;">Your Offer</div>
-                    <% } else { %>
-                        <form action="/marketplace/buy-item/<%=item._id%>/<%=item.item._id%>/<%=item.owner._id%>" method="POST">
-                            <button class="buttonItem btnWider" type="submit">Buy item</button>
-                        </form>
-                    <% }  %>
-                </ul>
-            </div> 
+                </div> 
+            <% } %>
+            <% if (filter.hasOwnProperty(item.item.type) || Object.keys(filter).length === 0 || ((JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) && filter.hasOwnProperty("OwnedByMe"))) { %>
+                <div class="itemTable">       
+                    <ul class="removeListStyle">
+                        <!-- <li id="equipment">Equipment</li> -->
+                        <ul class="removeListStyle allignList">
+                            <div class="weaponStats">           
+                            <li><%=item.item.name%></li>                         
+                                <div class="inlineStats">   
+                                    <li>⚔️ <%=item.item.modifier%></li>
+                                    <li>👻 <%=item.price%></li>
+                                </div>
+                            </div> 
+                            <li><img class="itemImage" src="../../<%=item.item.image%>" width="130px"></li>
+                        </ul>
+                        <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) { %>
+                            <form action="/marketplace/remove-offer/<%=item._id%>/<%=item.item._id%>" method="POST">
+                                <button class="buttonItem btnWider" type="submit">Withdraw offer</button>
+                            </form>
+                            <div style="color: green;">Your Offer</div>
+                        <% } else { %>
+                            <form action="/marketplace/buy-item/<%=item._id%>/<%=item.item._id%>/<%=item.owner._id%>" method="POST">
+                                <button class="buttonItem btnWider" type="submit">Buy item</button>
+                            </form>
+                        <% }  %>
+                    </ul>
+                </div> 
+            <% } %>
         <% } %>
-        <% if (filter.hasOwnProperty(item.item.type) || Object.keys(filter).length === 0 || ((JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) && filter.hasOwnProperty("OwnedByMe"))) { %>
-            <div class="itemTable">       
-                <ul class="removeListStyle">
-                    <!-- <li id="equipment">Equipment</li> -->
-                    <ul class="removeListStyle allignList">
-                        <div class="weaponStats">           
-                        <li><%=item.item.name%></li>                         
-                            <div class="inlineStats">   
-                                <li>⚔️ <%=item.item.modifier%></li>
-                                <li>👻 <%=item.price%></li>
-                            </div>
-                        </div> 
-                        <li><img class="itemImage" src="../../<%=item.item.image%>" width="130px"></li>
-                    </ul>
-                    <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) { %>
-                        <form action="/marketplace/remove-offer/<%=item._id%>/<%=item.item._id%>" method="POST">
-                            <button class="buttonItem btnWider" type="submit">Withdraw offer</button>
-                        </form>
-                        <div style="color: green;">Your Offer</div>
-                    <% } else { %>
-                        <form action="/marketplace/buy-item/<%=item._id%>/<%=item.item._id%>/<%=item.owner._id%>" method="POST">
-                            <button class="buttonItem btnWider" type="submit">Buy item</button>
-                        </form>
-                    <% }  %>
-                </ul>
-            </div> 
-        <% } %> 
     <% }) %>
     </div>
 </div>
