--- a/views/marketplace/view-own-offers.ejs
+++ b/views/marketplace/view-own-offers.ejs
@@ -24,9 +24,15 @@
                         <li><img class="itemImage" src="../../<%=item.item.image%>" width="130px"></li>
                     </ul>
                     <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) { %>
+                        <% if (!item.sold) { %>
                         <form action="/marketplace/remove-offer/<%=item._id%>/<%=item.item._id%>" method="POST">
                             <button class="buttonItem btnWider" type="submit">Withdraw offer</button>
                         </form>
+                        <% } else { %>
+                        <form action="/marketplace/claim-souls/<%=item._id%>/<%=item.owner._id%>" method="POST">
+                            <button class="buttonItem btnWider" type="submit">👻x<%=item.price%><br>Claim</button>
+                        </form>
+                        <% } %>
                         <div style="color: green;">Your Offer</div>
                     <% } else { %>
                         <form action="/marketplace/buy-item/<%=item._id%>/<%=item.item._id%>/<%=item.owner._id%>" method="POST">
@@ -41,3 +47,6 @@
 </div>
 
 </div>
+<% if (errorMessage !== "") { %>
+    <div class="display-error-message centralize"><%=errorMessage%></div>
+<% } %>
