--- a/views/marketplace/create-offer.ejs
+++ b/views/marketplace/create-offer.ejs
@@ -10,7 +10,7 @@
         <%- include("../../partials/item-card.ejs") %>
         <div>
             <form action="/marketplace/create-offer/<%=item._id%>" method="POST" style="display: flex; flex-direction: column; align-items: center;">
-                <label><input class="cleanInput" type="number", min="0" max="1000000" value="<%=item.value%>" name="price" /></label>
+                <label><input class="cleanInput" type="number", min="0" max="1000000" value="" name="price" /></label>
                 <div class="centerText">👻</div>
                 <button class="buttonItem btnWider" type="submit">Submit Offer</button>
             </form>
