Starting friends list

--- a/partials/nav-bar.ejs
+++ b/partials/nav-bar.ejs
@@ -34,7 +34,6 @@
               style="text-decoration: none"
               href="/user/soulkeeper/<%=sessionRace[0]._id%>"
             >
-            <%console.log("SESSIONRACEID: ", sessionRace)%>
               <div class="navImg">
                 <img src="/images/Icons/Stone.png" height="60px" />
               </div>
@@ -44,7 +43,7 @@
         <li>
           <div class="navImg">
             <p>
-              <a href="/marketplace  "
+              <a href="/marketplace"
                 ><img src="/images/Icons/Coin.png" height="60px"
               /></a>
             </p>
@@ -66,7 +65,7 @@
         <li>
           <div class="navImg">
             <p>
-              <a><img src="/images/Icons/Book.png" height="60px" /></a>
+              <a href="/friends"><img src="/images/Icons/Book.png" height="60px" /></a>
             </p>
           </div>
         </li>
