--- a/views/friends/index.ejs
+++ b/views/friends/index.ejs
@@ -14,6 +14,12 @@
             <button class="buttonItem widerButton">Search Friends</button>
         </form>
     </div>
+
+    <div>
+        
+    </div>
+
+    <div class="friends-ctn">
     <% if (!currentUser.friends.length) { %>
         <div class="centerText">You have no friends</div>
     <% } else { %>
@@ -26,4 +32,5 @@
         </ul>
         <% }) %>
     <% } %>
+    </div>
 <% } %>
