--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -465,3 +465,20 @@ input:focus {
   height: 800px;
   margin-bottom: -100px;
 }
+
+#friendsMessagesSite {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#friendsSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.friendAcceptRejectBtnCtn {
+  display: flex;
+  gap: 5px;
+}
