--- a/views/friends/index.ejs
+++ b/views/friends/index.ejs
@@ -1,36 +1,88 @@
 <%- include("../../partials/nav-bar.ejs") %>
 
-<h1 class="centerText">Friends</h1>
 
 <% if (currentUser) { %>
     <div class="centerText">
         <h2>Hello, <%=currentUser.username%> the <%=currentUser.character[0].race %>!</h2>
         <h3>What is your business here today?</h3>
     </div>
-    <div>
-        <form action="/friends/find" method="POST" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-            <div>Search friends</div>
-            <input style="margin-bottom: 5px;" class="cleanInput" name="searchTerm" placeholder="username"/>
-            <button class="buttonItem widerButton">Search Friends</button>
-        </form>
-    </div>
+        <div id="friendsMessagesSite">
+        <section id="friendsSection">
+            <h1 class="centerText">Friends</h1>
+            <div>
+                <form action="/friends/find" method="POST" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                    <div>Search friends</div>
+                    <input style="margin-bottom: 5px;" class="cleanInput" name="searchTerm" type="text" minlength="1" placeholder="username"/>
+                    <button class="buttonItem widerButton">Search</button>
+                </form>
+            </div>
 
-    <div>
-        
-    </div>
+            <div class="friendsSearchResult">
+                <% if (errorMessage !== "") { %>
+                    <div class="display-error-message centralize"><%=errorMessage%></div>
+                <% } else { %>
+                    <% console.log("RESULT: ", searchResult, "CURRENT: ", currentUser) %>
+                    <% if (searchResult !== null && searchResult !== "" && searchResult.username !== currentUser.username) { %>
+                        <form action="/friends/addRequest/<%=searchResult._id%>" method="POST">
+                            <div class="friends-card">
+                                <div>Result:</div>
+                                <div class="friendSearchResultCard">
+                                    <div><%=searchResult.username%></div>
+                                    <button class="buttonItem widerButton" type="submit">Add friend</button>
+                                </div>
+                            </div>
+                        </form>
+                    <% } else { %>
+                        <% if (searchResult !== "") { %>
+                        <div>Your search for "<%=searchTerm%>" returned no results.</div>
+                        <% } %>
+                    <% } %>
+                <% } %>
+            </div>
 
-    <div class="friends-ctn">
-    <% if (!currentUser.friends.length) { %>
-        <div class="centerText">You have no friends</div>
-    <% } else { %>
-        <% currentUser.friends.forEach(friend => { %>
-        <ul>
-            <li><%=friend.username%></li>
-            <li><%=friend.character[0].race%></li>
-            <li>Level: <%=friend.character[0].level%></li>
-            <li>Souls: <%=friend.character[0].souls%></li>
-        </ul>
-        <% }) %>
-    <% } %>
+            <div class="friendsCtn">
+            <% if (!currentUser.friends.length) { %>
+                <div class="centerText">You have no friends</div>
+            <% } else { %>
+                <div class="centerText">Friends list</div>
+                <% currentUser.friends.forEach(friend => { %>
+                <ul>
+                    <li><%=friend.username%></li>
+                    <li><%=friend.character[0].race%></li>
+                    <li>Level: <%=friend.character[0].level%></li>
+                    <li>Souls: <%=friend.character[0].souls%></li>
+                </ul>
+                <% }) %>
+            <% } %>
+            </div>
+        </section>
+        <section id="messageSection">
+            <div>
+                <h2>Messages</h2>
+                <div>
+                    <div class="messageContainer">
+                        <% if (currentUser.messages.length) { %>
+                            <% currentUser.messages.forEach(message => { %>
+                                <ul class="messageCard">
+                                    <li>From: <%=message.sender%></li>
+                                    <li>Subject: "<%=message.subject%>"</li>
+                                    <li>"<%=message.textBody%>"</li>
+                                    <% if (message.messageType === "friendrequest") { %>
+                                        <div class="friendAcceptRejectBtnCtn">
+                                            <form action="/friends/acceptRequest/<%=message._id%>/<%=message.sender._id%>" method="POST">
+                                                <button class="buttonItem" type="submit">Accept</button>
+                                            </form>
+                                            <form action="/friends/rejectRequest/<%=message._id%>/<%=message.sender._id%>" method="POST">
+                                                <button class="buttonItem" type="submit">Reject</button>
+                                            </form>
+                                        </div>
+                                    <% } %>
+                                </ul>
+                            <% }) %>
+                        <% } %>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 <% } %>
