Reject friend request feature

--- a/views/friends/index.ejs
+++ b/views/friends/index.ejs
@@ -71,7 +71,7 @@
                                             <form action="/friends/acceptRequest/<%=message._id%>/<%=message.sender._id%>" method="POST">
                                                 <button class="buttonItem" type="submit">Accept</button>
                                             </form>
-                                            <form action="/friends/rejectRequest/<%=message._id%>/<%=message.sender._id%>" method="POST">
+                                            <form action="/friends/rejectRequest/<%=message._id%>" method="POST">
                                                 <button class="buttonItem" type="submit">Reject</button>
                                             </form>
                                         </div>
