Populating friends list user's characters.

--- a/views/friends/index.ejs
+++ b/views/friends/index.ejs
@@ -49,7 +49,7 @@
                     <li><%=friend.username%></li>
                     <li><%=friend.character[0].race%></li>
                     <li>Level: <%=friend.character[0].level%></li>
-                    <li>Souls: <%=friend.character[0].souls%></li>
+                    <li>Weapon: <%=friend.character[0].weapon[0].name%></li>
                 </ul>
                 <% }) %>
             <% } %>
