game screen done

--- a/views/user/soulkeeper.ejs
+++ b/views/user/soulkeeper.ejs
@@ -25,7 +25,7 @@
                     <iframe  class="pack packQuery" src="https://my.spline.design/untitled-ab609558c464037e73ca314f2bec3a44/"></iframe>  
 
             <div class="soulkeeperPack">
-                <input class="buttonItem widerButton" type="text" name="name" value="Standard Pack" readonly />
+                <input class="buttonItem widerButton packTitleButton" type="submit" name="name" value="Standard Pack" readonly />
                 <button type="submit" class="purchaseButton buttonUnformat"><input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="10" readonly/>👻    </button>   
                 <input class="buttonItem widerButton cardPrice" type="button" name="answer" onclick="ShowMedium()" value=">"/>    
             </div>    
@@ -38,7 +38,7 @@
             <iframe  class="pack packQuery" src="https://my.spline.design/basicpackcopy-256eb5e9758011142a1b22958c1ec751/"></iframe>
 
         <div class="soulkeeperPack">
-                <input class="buttonItem widerButton" type="text" name="name" value="Medium Pack" readonly />
+                <input class="buttonItem widerButton packTitleButton" type="submit"" name="name" value="Medium Pack" readonly />
                 <button class="purchaseButton buttonUnformat" type="submit"><input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="50" readonly/>👻    </button>   
                 <input class="buttonItem widerButton cardPrice" type="button" name="answer" onclick="ShowBasic()"  value="<" />   
                 <input class="buttonItem widerButton cardPrice" type="button" name="answer" onclick="ShowLegendary()" value=">"/> 
@@ -51,7 +51,7 @@
             <iframe  class="pack packQuery" src="https://my.spline.design/basicpackcopy-d1e17c843ca542f6588e4e5b60a12aac/"></iframe>
 
             <div class="soulkeeperPack">
-                <input class="buttonItem widerButton" type="text" name="name" value="Legendary Pack" readonly />
+                <input class="buttonItem widerButton packTitleButton" type="submit" name="name" value="Legendary Pack" readonly />
                 <button class="purchaseButton buttonUnformat type="submit"><input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="500" readonly/>👻    </button>    
                 <input class="buttonItem widerButton cardPrice" type="button" name="answer" onclick="ShowMedium()" value="<"/>    
             </div>        
