--- a/partials/item-card.ejs
+++ b/partials/item-card.ejs
@@ -2,7 +2,7 @@
     <ul class="removeListStyle">
         <!-- <li id="equipment">Equipment</li> -->
         <ul class="removeListStyle allignList">
-            <li><img class="itemImage" src="../<%=item.image%>" width="130px"></li>
+            <li><img class="itemImage" src="../../../<%=item.image%>" width="130px"></li>
             <div class="weaponStats">                   
             <li class="itemName"><%=item.name%></li>
                 <div class="inlineStats">                            
