--- a/views/friends/new-message.ejs
+++ b/views/friends/new-message.ejs
@@ -4,12 +4,20 @@
     <section>
         <div class="newMessageCtn">
             <h1>New Message</h1>
-            <form class="newMessage">
+            <form class="newMessage" action="/friends/newMessage/<%=friend._id%>/att" method="POST">
                 <div>From:</div> <input class="cleanInput messageInputs" name="fromField" value="<%=currentUser.username%>" readonly/>
                 <div>To:</div> <input class="cleanInput messageInputs" name="toField" value="<%=friend.username%>" readonly/>
-                <div>Subject:</div> <input class="cleanInput messageInputs" type="text" name="subject" placeholder="Subject" minlength="4"/>
-                <div>Message:</div> <input class="cleanInput messageTextBody messageInputs" type="textarea" name="textBody" placeholder="Message" minlength="4" maxlength="5000" rows="10" cols="10"/>
-                <div class="centerText"><button class="buttonItem" type="submit">Send message</button></div>
+                <div>Subject:</div> <input class="cleanInput messageInputs" type="text" name="subject" value="<%=content.subject%>" placeholder="Subject" minlength="1"/>
+                <div>Message:</div> <input class="cleanInput messageTextBody messageInputs" type="textarea" name="textBody" value="<%=content.body%>" placeholder="Message" minlength="1" maxlength="5000" rows="10" cols="10"/>
+                <% if (!attachment) { %>
+                    <div>Attachment:</div><button class="buttonItem" style="width: 120px;" type="submit" name="attachmentBtn" value="attachmentBtn">Attach item</button>
+                <% } else if (item === null) { %>
+                    <%- include("../../partials/inventory-display.ejs") %>
+                <% } else { %>
+                    <%- include("../../partials/item-card.ejs") %>
+                    <button class="buttonItem" type="submit" name="removeAttachedItemBtn" value="removeAttachedItemBtn">Remove attachment</button>
+                <% } %>
+                <div class="centerText"><button class="buttonItem" style="width: 120px;" type="submit" name="sendBtn" value="sendBtn">Send message</button></div>
             </form>
         </div>
     </section>
