--- a/views/user/game.ejs
+++ b/views/user/game.ejs
@@ -43,7 +43,10 @@
         <% if (session && character.weapon.length) { %>
             <div id="noWeapon" style="display: block;"></div>
             <div id="weaponname" class="buttonItem widerButton ultraWideButton" ><%=character.weapon[0].name%> 
-                <p id="damage">+<%=character.weapon[0].modifier%></p>
+                <div style="display: flex; gap: 10px; justify-content: center;">
+                    <p id="damage"><%=character.weapon[0].modifier%></p>
+                    <p id="level"><%=character.level%></p>
+                </div>
                 <img src="<%=character.weapon[0].image%>" width="90px">
             </div>
             
