--- a/views/user/soulkeeper.ejs
+++ b/views/user/soulkeeper.ejs
@@ -26,7 +26,7 @@
 
             <div class="soulkeeperPack">
                 <input class="buttonItem widerButton packTitleButton" type="submit" name="name" value="Standard Pack" readonly />
-                <button type="submit" class="purchaseButton buttonUnformat"><input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="10" readonly/>👻    </button>   
+                <input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="10" readonly/>👻
                 <input class="buttonItem widerButton cardPrice" type="button" name="answer" onclick="ShowMedium()" value=">"/>    
             </div>    
                 
@@ -39,7 +39,7 @@
 
         <div class="soulkeeperPack">
                 <input class="buttonItem widerButton packTitleButton" type="submit"" name="name" value="Medium Pack" readonly />
-                <button class="purchaseButton buttonUnformat" type="submit"><input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="50" readonly/>👻    </button>   
+                <input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="50" readonly/>👻 
                 <input class="buttonItem widerButton cardPrice" type="button" name="answer" onclick="ShowBasic()"  value="<" />   
                 <input class="buttonItem widerButton cardPrice" type="button" name="answer" onclick="ShowLegendary()" value=">"/> 
         </div>         
@@ -52,7 +52,7 @@
 
             <div class="soulkeeperPack">
                 <input class="buttonItem widerButton packTitleButton" type="submit" name="name" value="Legendary Pack" readonly />
-                <button class="purchaseButton buttonUnformat type="submit"><input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="500" readonly/>👻    </button>    
+                <input class="buttonItem widerButton cardPrice buyPack" type="number" name="price" value="500" readonly/>👻   
                 <input class="buttonItem widerButton cardPrice" type="button" name="answer" onclick="ShowMedium()" value="<"/>    
             </div>        
             </form>
