--- a/views/user/game.ejs
+++ b/views/user/game.ejs
@@ -45,6 +45,7 @@
             <div id="weaponname" class="buttonItem widerButton ultraWideButton" ><%=character.weapon[0].name%> 
                 <div style="display: flex; gap: 10px; justify-content: center;">
                     <p id="damage"><%=character.weapon[0].modifier%></p>
+                    <% console.log("LEVEL: ", character.level) %>
                     <p id="level"><%=character.level%></p>
                 </div>
                 <img src="<%=character.weapon[0].image%>" width="90px">
